@@ -1,3 +1,8 @@
+Fri Apr 12 23:36:01 1996  Richard Basch  <basch@lehman.com>
+
+	* forward.c (rd_and_store_for_creds): Consistency with the
+	krlogind forwarded credentials cache naming scheme - krb5cc_p<pid>
+
 Thu Apr 11 21:45:21 1996  Richard Basch  <basch@lehman.com>
 
 	* forward.c (rd_and_store_for_creds): If we are going to use a
